--- a/index.html
+++ b/index.html
@@ -17,14 +17,28 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#" class="nav__link"></a>
+                        <a href="#home" class="nav__link">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#about" class="nav__link">About</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#discover" class="nav__link">Discover</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#place" class="nav__link">Place</a>
                     </li>
                 </ul>
+                <i class="ri-close-fill nav__close" id="nav-close"></i> 
+            </div>
+            <div class="nav__toggle" id="nav-toggle">
+                <i class="ri-function-line"></i>
             </div>
         </nav>
     </header>
     <main class="main">
 
     </main>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
