--- a/index.html
+++ b/index.html
@@ -32,12 +32,43 @@
                 <i class="ri-close-fill nav__close" id="nav-close"></i> 
             </div>
             <div class="nav__toggle" id="nav-toggle">
-                <i class="ri-function-line"></i>
+                <i class="ri-menu-fill"></i>
             </div>
         </nav>
     </header>
     <main class="main">
-
+        <section class="home" id="home">
+            <img src="assets/images/jp-home1.jpg" alt="" class="home__img">
+            <div class="home__container container grid">
+                <div class="home__data">
+                    <span class="home__data-subtitle">Discover your place</span>
+                    <h1 class="home__data-title">Explore Japan's <br> <b>Most Beautiful <br></b> Destinations</h1>
+                    <a href="#" class="button">Explore</a>
+                </div>
+                <div class="home__social">
+                    <a href="https://www.facebook.com/" target="_blank" class="home__social-link" id="facebook">
+                        <i class="ri-facebook-box-fill"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank" class="home__social-link" id="instagram">
+                        <i class="ri-instagram-fill"></i>
+                    </a>
+                    <a href="https://www.twitter.com/" target="_blank" class="home__social-link" id="twitter">
+                        <i class="ri-twitter-fill"></i>
+                    </a>
+                </div>
+                <div class="home__info">
+                    <div>
+                        <span class="home__info-title">5 best places to visit</span>
+                        <a href="#" class="button button--flex button--link home__info-button">
+                            More <i class="ri-arrow-right-line"></i>
+                        </a>
+                    </div>
+                    <div class="home__info-overlay">
+                        <img src="assets/images/jp-home-2.jpeg" alt="" class="home__info-img">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="/assets/js/main.js"></script>
 </body>
