--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <main class="main">
         <section class="home" id="home">
-            <img src="assets/images/jp-home1.jpg" alt="" class="home__img">
+            <img src="assets/images/home.jpg" alt="" class="home__img">
             <div class="home__container container grid">
                 <div class="home__data">
                     <span class="home__data-subtitle">Discover your place</span>
@@ -64,7 +64,7 @@
                         </a>
                     </div>
                     <div class="home__info-overlay">
-                        <img src="assets/images/jp-home-2.jpeg" alt="" class="home__info-img">
+                        <img src="assets/images/home2.jpeg" alt="" class="home__info-img">
                     </div>
                 </div>
             </div>
