Feat: about section design

--- a/index.html
+++ b/index.html
@@ -69,6 +69,23 @@
                 </div>
             </div>
         </section>
+        <section class="about section" id="about">
+            <div class="about__container container grid">
+                <div class="about__data">
+                    <h2 class="section__title about__title">More information <br> about the best of Japan</h2>
+                    <p class="about__description">You can find the most beautiful and pleasant places at the best prices with special discounts, you choose the place we will guide you all the way to wait, get your place now.</p>
+                    <a href="#" class="button">Reserve a place</a>
+                </div>
+                <div class="about__img">
+                    <div class="about__img-overlay">
+                        <img src="assets/images/about.jpg" alt="" class="about__img-one">
+                    </div>
+                    <div class="about__img-overlay">
+                        <img src="assets/images/about2.jpg" alt="" class="about__img-two">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="/assets/js/main.js"></script>
 </body>
