--- a/index.html
+++ b/index.html
@@ -86,7 +86,45 @@
                 </div>
             </div>
         </section>
+        <section class="discover section" id="discover">
+            <h2 class="section__title">
+                Discover the most <br> attractive places
+            </h2>
+            <div class="discover__container container swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="discover__card swiper-slide">
+                        <img src="assets/images/discover1.jpg" alt="" class="discover__img">
+                        <div class="discover__data">
+                            <h2 class="discover__title">Tokyo</h2>
+                            <span class="discover__description">24 tours available</span>
+                        </div>
+                    </div>
+                    <div class="discover__card swiper-slide">
+                        <img src="assets/images/discover2.jpeg" alt="" class="discover__img">
+                        <div class="discover__data">
+                            <h2 class="discover__title">Mount Fuji</h2>
+                            <span class="discover__description">16 tours available</span>
+                        </div>
+                    </div>
+                    <div class="discover__card swiper-slide">
+                        <img src="assets/images/discover3.jpeg" alt="" class="discover__img">
+                        <div class="discover__data">
+                            <h2 class="discover__title">Osaka</h2>
+                            <span class="discover__description">10 tours available</span>
+                        </div>
+                    </div>
+                    <div class="discover__card swiper-slide">
+                        <img src="assets/images/discover4.jpeg" alt="" class="discover__img">
+                        <div class="discover__data">
+                            <h2 class="discover__title">Kyoto</h2>
+                            <span class="discover__description">12 tours available</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
