Feat: experience section design

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                 </div>
                 <div class="about__img">
                     <div class="about__img-overlay">
-                        <img src="assets/images/about.jpg" alt="" class="about__img-one">
+                        <img src="assets/images/about.jpg" alt="white and brown concrete building surronded by cherry blossom trees under blue sky during daytime" class="about__img-one">
                     </div>
                     <div class="about__img-overlay">
-                        <img src="assets/images/about2.jpg" alt="" class="about__img-two">
+                        <img src="assets/images/about2.jpg" alt="brown and gold pagoda near cherry blossom" class="about__img-two">
                     </div>
                 </div>
             </div>
@@ -93,32 +93,68 @@
             <div class="discover__container container swiper-container">
                 <div class="swiper-wrapper">
                     <div class="discover__card swiper-slide">
-                        <img src="assets/images/discover1.jpg" alt="" class="discover__img">
+                        <img src="assets/images/discover1.jpg" alt="vehicles on roadway between lighted buildings at night" class="discover__img">
                         <div class="discover__data">
                             <h2 class="discover__title">Tokyo</h2>
                             <span class="discover__description">24 tours available</span>
                         </div>
                     </div>
                     <div class="discover__card swiper-slide">
-                        <img src="assets/images/discover2.jpeg" alt="" class="discover__img">
+                        <img src="assets/images/discover2.jpeg" alt="red, grey and brown pagoda temple near mount fuji" class="discover__img">
                         <div class="discover__data">
                             <h2 class="discover__title">Mount Fuji</h2>
                             <span class="discover__description">16 tours available</span>
                         </div>
                     </div>
                     <div class="discover__card swiper-slide">
-                        <img src="assets/images/discover3.jpeg" alt="" class="discover__img">
+                        <img src="assets/images/discover3.jpeg" alt="white, green and gold temple surrounded by trees near lake during daytime" class="discover__img">
                         <div class="discover__data">
                             <h2 class="discover__title">Osaka</h2>
                             <span class="discover__description">10 tours available</span>
                         </div>
                     </div>
                     <div class="discover__card swiper-slide">
-                        <img src="assets/images/discover4.jpeg" alt="" class="discover__img">
+                        <img src="assets/images/discover4.jpeg" alt="empty tunnel between red walls" class="discover__img">
                         <div class="discover__data">
                             <h2 class="discover__title">Kyoto</h2>
                             <span class="discover__description">12 tours available</span>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="experience section">
+            <h2 class="section__title">With Our Experience <br> We Will Serve You</h2>
+            <div class="experience__container container grid">
+                <div class="experience__content grid">
+                    <div class="experience__data">
+                        <h2 class="experience__number">20</h2>
+                        <span class="experience__description">
+                            Year <br> Experience
+                        </span>
+                    </div>
+
+                    <div class="experience__data">
+                        <h2 class="experience__number">75</h2>
+                        <span class="experience__description">
+                            Complete <br> tours
+                        </span>
+                    </div>
+
+                    <div class="experience__data">
+                        <h2 class="experience__number">650+</h2>
+                        <span class="experience__description">
+                            Tourist <br> Destination
+                        </span>
+                    </div>
+                </div>
+
+                <div class="experience__img grid">
+                    <div class="experience__overlay">
+                        <img src="assets/images/experience1.jpg" alt="person standing in front of fish tank" class="experience__img-one">
+                    </div>
+                    <div class="experience__overlay">
+                        <img src="assets/images/experience2.jpg" alt="woman in white and blue inside Teamlab Borderless Museum dancing with blue lights" class="experience__img-two">
                     </div>
                 </div>
             </div>
