--- a/index.html
+++ b/index.html
@@ -183,13 +183,18 @@
                     <img src="/assets/images/place1.jpeg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
-                            <i class="ri-star-line place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-half-line place__rating-icon"></i>
                             <span class="place__rating-number">4,5</span>
                         </span>
                         <div class="place__data">
+                            <span class="place__users"><i class="ri-footprint-line"></i></span>
+                            <span class="place__users-value">4735</span>
                             <h3 class="place__title">Shibuya</h3>
                             <span class="place__subtitle">Tokyo</span>
-                            <span class="place__price">$3207</span>
                         </div>
                     </div>
                     <button class="button button--flex place__button">
@@ -201,13 +206,18 @@
                     <img src="/assets/images/place2.jpg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
-                            <i class="ri-star-line place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-half-line place__rating-icon"></i>
                             <span class="place__rating-number">4,8</span>
                         </span>
                         <div class="place__data">
+                            <span class="place__users"><i class="ri-footprint-line"></i></span>
+                            <span class="place__users-value">3655</span>
                             <h3 class="place__title">Hanatoro</h3>
                             <span class="place__subtitle">Kyoto</span>
-                            <span class="place__price">$2066</span>
                         </div>
                     </div>
                     <button class="button button--flex place__button">
@@ -219,13 +229,18 @@
                     <img src="/assets/images/place3.jpg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
                             <i class="ri-star-line place__rating-icon"></i>
-                            <span class="place__rating-number">4,6</span>
+                            <span class="place__rating-number">4,0</span>
                         </span>
                         <div class="place__data">
+                            <span class="place__users"><i class="ri-footprint-line"></i></span>
+                            <span class="place__users-value">1965</span>
                             <h3 class="place__title">Miyajima</h3>
                             <span class="place__subtitle">Hiroshima</span>
-                            <span class="place__price">$1965</span>
                         </div>
                     </div>
                     <button class="button button--flex place__button">
@@ -237,13 +252,18 @@
                     <img src="/assets/images/place4.jpg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
-                            <i class="ri-star-line place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
                             <span class="place__rating-number">5,0</span>
                         </span>
                         <div class="place__data">
+                            <span class="place__users"><i class="ri-footprint-line"></i></span>
+                            <span class="place__users-value">2782</span>
                             <h3 class="place__title">Okinawa</h3>
                             <span class="place__subtitle">Okinawa</span>
-                            <span class="place__price">$2782</span>
                         </div>
                     </div>
                     <button class="button button--flex place__button">
@@ -256,13 +276,18 @@
                     <img src="/assets/images/place5.jpg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
-                            <i class="ri-star-line place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-half-line place__rating-icon"></i>
                             <span class="place__rating-number">4,7</span>
                         </span>
                         <div class="place__data">
+                            <span class="place__users"><i class="ri-footprint-line"></i></span>
+                            <span class="place__users-value">3360</span>
                             <h3 class="place__title">Fuji</h3>
                             <span class="place__subtitle">Shizuoka</span>
-                            <span class="place__price">$2360</span>
                         </div>
                     </div>
                     <button class="button button--flex place__button">
@@ -274,20 +299,25 @@
                     <img src="/assets/images/place6.jpg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
+                            <i class="ri-star-fill place__rating-icon"></i>
                             <i class="ri-star-line place__rating-icon"></i>
-                            <span class="place__rating-number">4,9</span>
+                            <span class="place__rating-number">4,0</span>
                         </span>
                         <div class="place__data">
+                            <span class="place__users"><i class="ri-footprint-line"></i></span>
+                            <span class="place__users-value">2635</span>
                             <h3 class="place__title">Shinsekai</h3>
                             <span class="place__subtitle">Osaka</span>
-                            <span class="place__price">$2635</span>
                         </div>
                     </div>
                     <button class="button button--flex place__button">
                         <i class="ri-arrow-right-line"></i>
                     </button>
                 </div>
-                
+            </div>
         </section>
     </main>
     <script src="assets/js/swiper-bundle.min.js"></script>
