Feat: Sponsors Section Design

--- a/index.html
+++ b/index.html
@@ -370,6 +370,25 @@
                 </div>
             </div>
         </section>
+        <section class="sponsor section">
+            <div class="sponsor__container container grid">
+                <div class="sponsor__content">
+                    <img src="assets/images/sponsors1.png" alt="" class="sponsor__img">
+                </div>
+                <div class="sponsor__content">
+                    <img src="assets/images/sponsors2.png" alt="" class="sponsor__img">
+                </div>
+                <div class="sponsor__content">
+                    <img src="assets/images/sponsors3.png" alt="" class="sponsor__img">
+                </div>
+                <div class="sponsor__content">
+                    <img src="assets/images/sponsors4.png" alt="" class="sponsor__img">
+                </div>
+                <div class="sponsor__content">
+                    <img src="assets/images/sponsors5.png" alt="" class="sponsor__img">
+                </div>
+            </div>
+        </section>
     </main>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="/assets/js/main.js"></script>
