--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                         <i class="ri-facebook-box-fill"></i>
                     </a>
                     <a href="https://www.instagram.com/" target="_blank" class="home__social-link" id="instagram">
-                        <i class="ri-instagram-line"></i>
+                        <i class="ri-instagram-fill"></i>
                     </a>
-                    <a href="https://www.twitter.com/" target="_blank" class="home__social-link" id="twitter">
+                    <a href="https://www.twitter.com/" target="_blank" class="home__social-link"  id="twitter">
                         <i class="ri-twitter-fill"></i>
                     </a>
                 </div>
@@ -389,6 +389,87 @@
                 </div>
             </div>
         </section>
+        <footer class="footer section">
+            <div class="footer__container container grid">
+                <div class="footer__content grid">
+                    <div class="footer__data">
+                        <h3 class="footer__title">Travel</h3>
+                        <p class="footer__description">Travel you choose the <br> destination, we offer you the <br> experience.</p>
+
+                        <div>
+                            <a href="https://www.facebook.com/" target="_blank" class="footer__social" id="facebook">
+                                <i class="ri-facebook-box-fill"></i>
+                            </a>
+                            <a href="https://www.instagram.com/" target="_blank" class="footer__social" id="instagram">
+                                <i class="ri-instagram-fill"></i>
+                            </a>
+                            <a href="https://twitter.com/" target="_blank" class="footer__social" id="twitter">
+                                <i class="ri-twitter-fill"></i>
+                            </a>
+                            <a href="https://www.youtube.com/" target="_blank" class="footer__social" id="youtube">
+                                <i class="ri-youtube-fill"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="footer__data">
+                        <h3 class="footer__subtitle">About</h3>
+
+                        <ul>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">About Us</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Features</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">New &#38; Blog</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="footer__data">
+                        <h3 class="footer__subtitle">Company</h3>
+
+                        <ul>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Team</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Plan and Pricing</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Become a member</a>
+                            </li>
+                        </ul>  
+                    </div>
+
+                    <div class="footer__data">
+                        <h3 class="footer__subtitle">Support</h3>
+
+                        <ul>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">FAQs</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Support Center</a>
+                            </li>
+                            <li class="footer__item">
+                                <a href="#" class="footer__link">Contact Us</a>
+                            </li>
+                        </ul>  
+                    </div>
+                </div>
+                
+                <div class="footer__rights">
+                    <p class="footer__copy">&#169; 2021 Travel. All rights reserved.</p>
+                    <div class="footer__terms">
+                        <a href="#" class="footer__terms-link">Terms & Agreements</a>
+                        <a href="#" class="footer__terms-link">Privacy Policy</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="/assets/js/main.js"></script>
