--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css">
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- FAVICON -->
+    <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
+    <!-- For iPad with high-resolution Retina display running iOS ≥ 7 -->
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/favicon/sakura-152-262302.png">
+    <!-- For iPad with high-resolution Retina display running iOS ≤ 6 -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/favicon/sakura-144-262302.png">
+    <!-- For iPhone with high-resolution Retina display running iOS ≥ 7 -->
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/favicon/sakura-120-262302.png">
+    <!-- For iPhone with high-resolution Retina display running iOS ≤ 6 -->
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/favicon/sakura-114-262302.png">
+    <!-- For first- and second-generation iPad -->
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/favicon/sakura-72-262302.png">
+    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices -->
+    <link rel="apple-touch-icon-precomposed" href="/assets/favicon/sakura-57-262302.png">
 </head>
 <body>
     <header class="header" id="header">
