--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             </div>
             
             <div class="footer__rights">
-                <p class="footer__copy">&#169; 2021 Travel. All rights reserved.</p>
+                <p class="footer__copy"> &#169; 2021 Travel. All rights reserved.</p>
                 <div class="footer__terms">
                     <a href="#" class="footer__terms-link">Terms & Agreements</a>
                     <a href="#" class="footer__terms-link">Privacy Policy</a>
@@ -487,6 +487,9 @@
             </div>
         </div>
     </footer>
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-line scrollup__icon"></i>
+    </a>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="/assets/js/main.js"></script>
 </body>
