Feat: Light/Dark Theme Design

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                         <a href="#place" class="nav__link">Place</a>
                     </li>
                 </ul>
+
+                <div class="nav__dark">
+                    <i class="ri-moon-line change-theme" id="theme-button"></i>
+                </div>
+
                 <i class="ri-close-fill nav__close" id="nav-close"></i> 
             </div>
             <div class="nav__toggle" id="nav-toggle">
