Feat: Favicon changed

--- a/index.html
+++ b/index.html
@@ -11,20 +11,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- FAVICON -->
-    <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/assets/Favicon/favicon.ico">
 
-    <!-- For iPad with high-resolution Retina display running iOS ≥ 7 -->
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/favicon/sakura-152-262302.png">
-    <!-- For iPad with high-resolution Retina display running iOS ≤ 6 -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/favicon/sakura-144-262302.png">
-    <!-- For iPhone with high-resolution Retina display running iOS ≥ 7 -->
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/favicon/sakura-120-262302.png">
-    <!-- For iPhone with high-resolution Retina display running iOS ≤ 6 -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/favicon/sakura-114-262302.png">
-    <!-- For first- and second-generation iPad -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/favicon/sakura-72-262302.png">
-    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices -->
-    <link rel="apple-touch-icon-precomposed" href="/assets/favicon/sakura-57-262302.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <header class="header" id="header">
