Feat: Discover card fifth image

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="home__data">
                     <span class="home__data-subtitle">Discover your place</span>
                     <h1 class="home__data-title">Explore Japan's <br> <b>Most Beautiful <br></b> Destinations</h1>
-                    <a href="#" class="button">Explore</a>
+                    <a href="#discover" class="button">Explore</a>
                 </div>
                 <div class="home__social">
                     <a href="https://www.facebook.com/" target="_blank" class="home__social-link" id="facebook">
@@ -71,8 +71,8 @@
                 </div>
                 <div class="home__info">
                     <div>
-                        <span class="home__info-title">5 best places to visit</span>
-                        <a href="#" class="button button--flex button--link home__info-button">
+                        <span class="home__info-title">6 best places to visit</span>
+                        <a href="#place" class="button button--flex button--link home__info-button">
                             More <i class="ri-arrow-right-line"></i>
                         </a>
                     </div>
@@ -87,7 +87,7 @@
                 <div class="about__data">
                     <h2 class="section__title about__title">More information <br> about the best of Japan</h2>
                     <p class="about__description">You can find the most beautiful and pleasant places at the best prices with special discounts, you choose the place we will guide you all the way to wait, get your place now.</p>
-                    <a href="#" class="button">Reserve a place</a>
+                    <a href="#place" class="button">Reserve a place</a>
                 </div>
                 <div class="about__img">
                     <div class="about__img-overlay">
@@ -127,7 +127,14 @@
                         </div>
                     </div>
                     <div class="discover__card swiper-slide">
-                        <img src="assets/images/discover4.jpeg" alt="empty tunnel between red walls" class="discover__img">
+                        <img src="assets/images/discover4.jpg" alt="red wooden cross on gray concrete pathway between green trees during daytime" class="discover__img">
+                        <div class="discover__data">
+                            <h2 class="discover__title">Hakone</h2>
+                            <span class="discover__description">14 tours available</span>
+                        </div>
+                    </div>
+                    <div class="discover__card swiper-slide">
+                        <img src="assets/images/discover5.jpeg" alt="empty tunnel between red walls" class="discover__img">
                         <div class="discover__data">
                             <h2 class="discover__title">Kyoto</h2>
                             <span class="discover__description">12 tours available</span>
@@ -136,6 +143,7 @@
                 </div>
             </div>
         </section>
+
         <section class="experience section">
             <h2 class="section__title">With Our Experience <br> We Will Serve You</h2>
             <div class="experience__container container grid">
@@ -161,14 +169,13 @@
                         </span>
                     </div>
                 </div>
-    
                 <div class="experience__img grid">
                     <div class="experience__card">
                         <div class="experience__overlay">
                             <img src="assets/images/experience1.jpg" alt="" class="experience__picture">
                         </div>
                         <div class="experience__content-box experience__box-two">
-                            <div class="experience__info info-two">
+                            <div class="experience__info info-left">
                                 <h2 class="experience__card-title">Shinjuku Gyoen</h2>
                                 <p class="experience__card-description">Spacious city park in Shinjuku, Tokyo.</p>
                             </div>
@@ -190,7 +197,7 @@
                             <img src="assets/images/experience3.jpg" alt="" class="experience__picture">
                         </div>
                         <div class="experience__content-box experience__box-two">
-                            <div class="experience__info info-two">
+                            <div class="experience__info info-left">
                                 <h2 class="experience__card-title">Chabudai</h2>
                                 <p class="experience__card-description">Popular short-legged table found in many Japanese houses.</p>
                             </div>
@@ -201,7 +208,7 @@
                             <img src="assets/images/experience4.jpg" alt="" class="experience__picture">
                         </div>
                         <div class="experience__content-box">
-                            <div class="experience__info info-four">
+                            <div class="experience__info">
                                 <h2 class="experience__card-title">Japanese food</h2>
                                 <p class="experience__card-description">Large variety of dishes and regional specialties.</p>
                             </div>
@@ -210,6 +217,7 @@
                 </div>
             </div>
         </section>
+
         <section class="video section">
             <h2 class="section__title">Video Tour</h2>
 
@@ -226,6 +234,7 @@
                 </div>
             </div>
         </section>
+    
         <section class="place section" id="place">
             <h2 class="section__title">Choose Your Place</h2>
 
@@ -290,8 +299,8 @@
                         <div class="place__data">
                             <span class="place__users"><i class="ri-footprint-line"></i></span>
                             <span class="place__users-value">1965</span>
-                            <h3 class="place__title">Miyajima</h3>
-                            <span class="place__subtitle">Hiroshima</span>
+                            <h3 class="place__title">Hiroshima</h3>
+                            <span class="place__subtitle">Chugoku</span>
                         </div>
                     </div>
                     <button class="button button--flex place__button">
