Feat: Custom Checkbox Toggle Button for Dark Mode

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
                 </ul>
 
                 <div class="nav__dark">
-                    <i class="ri-moon-line change-theme" id="theme-button"></i>
+                    <input type="checkbox" class="checkbox" id="chk"/>
+                    <label class="label" for="chk">
+                        <i class="ri-sun-line sun-icon"></i>
+                        <i class="ri-moon-line moon-icon"></i>
+                        <div class="ball"></div>
+                    </label>
                 </div>
 
                 <i class="ri-close-fill nav__close" id="nav-close"></i> 
