Fix: href attribute issues

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- FAVICON -->
-    <link rel="icon" type="image/x-icon" href="/assets/Favicon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/Favicon/favicon.ico">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <header class="header" id="header">
@@ -269,7 +268,7 @@
                 </div>
 
                 <div class="place__card">
-                    <img src="/assets/images/place2.jpg" alt="" class="place__img">
+                    <img src="assets/images/place2.jpg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
                             <i class="ri-star-fill place__rating-icon"></i>
@@ -292,7 +291,7 @@
                 </div>
 
                 <div class="place__card">
-                    <img src="/assets/images/place3.jpg" alt="" class="place__img">
+                    <img src="assets/images/place3.jpg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
                             <i class="ri-star-fill place__rating-icon"></i>
@@ -315,7 +314,7 @@
                 </div>
 
                 <div class="place__card">
-                    <img src="/assets/images/place4.jpg" alt="" class="place__img">
+                    <img src="assets/images/place4.jpg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
                             <i class="ri-star-fill place__rating-icon"></i>
@@ -339,7 +338,7 @@
 
 
                 <div class="place__card">
-                    <img src="/assets/images/place5.jpg" alt="" class="place__img">
+                    <img src="assets/images/place5.jpg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
                             <i class="ri-star-fill place__rating-icon"></i>
@@ -362,7 +361,7 @@
                 </div>
 
                 <div class="place__card">
-                    <img src="/assets/images/place6.jpg" alt="" class="place__img">
+                    <img src="assets/images/place6.jpg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
                             <i class="ri-star-fill place__rating-icon"></i>
@@ -504,6 +503,6 @@
     </a>
     <script src="assets/js/scrollreveal.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
