Fix: href image issue

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- FAVICON -->
-    <link rel="icon" type="image/x-icon" href="assets/Favicon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="assets/Favicon/site.webmanifest">
 </head>
 <body>
     <header class="header" id="header">
@@ -245,7 +246,7 @@
 
             <div class="place__container container grid">
                 <div class="place__card">
-                    <img src="/assets/images/place1.jpeg" alt="" class="place__img">
+                    <img src="assets/images/place1.jpeg" alt="" class="place__img">
                     <div class="place__content">
                         <span class="place__rating">
                             <i class="ri-star-fill place__rating-icon"></i>
