--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </a>
                     </div>
                     <div class="home__info-overlay">
-                        <img src="assets/images/home2.jpeg" alt="" class="home__info-img">
+                        <img src="assets/images/home.jpeg" alt="" class="home__info-img">
                     </div>
                 </div>
             </div>
